agentforce-case-management/force-app/main/default/objects/Case/fields/AI_Category__c.field-meta.xml
<CustomField>
    <fullName>AI_Category__c</fullName>
    <description>Stores the AI-recommended case category based on analysis of the case description and related customer context. Used for intelligent case classification and routing.</description>
    <label>AI Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Account Access</fullName>
            </value>
            <value>
                <fullName>Order Issue</fullName>
            </value>
            <value>
                <fullName>General Inquiry Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>