agentforce-case-management/force-app/main/default/objects/Case/fields/AI_Priority__c.field-meta.xml
<CustomField>
    <fullName>AI_Priority__c</fullName>
    <description>Represents the AI-generated priority recommendation for the case based on issue severity, customer impact, and business rules</description>
    <label>AI Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>