agentforce-case-management/force-app/main/default/objects/Case/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <description>Stores the AI-generated summary of the customer support case produced by Agentforce. Used to help support agents quickly understand the issue and reduce manual review time.</description>
    <inlineHelpText>AI generated summary created by Agentforce based on case description and customer context.</inlineHelpText>
    <label>AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>