agentforce-case-management/force-app/main/default/objects/Case/fields/External_System_Id__c.field-meta.xml
<CustomField>
    <fullName>External_System_Id__c</fullName>
    <description>Stores the unique identifier returned by the external system after successful integration processing. Used for cross-system tracking and synchronization.</description>
    <externalId>true</externalId>
    <label>External System Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>