agentforce-case-management/force-app/main/default/objects/Case/fields/Integration_Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_Correlation_ID__c</fullName>
    <label>Integration Correlation ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>