agentforce-case-management/force-app/main/default/objects/Case/fields/Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error__c</fullName>
    <description>Stores detailed integration or processing error messages generated during asynchronous operations or external API communication failures.</description>
    <label>Integration Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>