agentforce-case-management/force-app/main/default/objects/Case/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>Tracks the current status of the external system integration process for the case. Used for monitoring asynchronous processing and troubleshooting failures.</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Retrying</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>