agentforce-case-management/force-app/main/default/objects/Case/fields/Last_Integration_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Integration_Date__c</fullName>
    <label>Last Integration Date</label>
    <type>DateTime</type>
</CustomField>