agentforce-case-management/force-app/main/default/objects/Case/fields/Last_Processing_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Processing_Error__c</fullName>
    <label>Last Processing Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>