agentforce-case-management/force-app/main/default/objects/Case/fields/Last_Retry_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Retry_Date__c</fullName>
    <label>Last Retry Date</label>
    <type>DateTime</type>
</CustomField>