agentforce-case-management/force-app/main/default/objects/Case/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>Stores the number of retry attempts made for failed integration processing. Used to prevent infinite retry loops and support retry governance logic.</description>
    <label>Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>