agentforce-case-management/force-app/main/default/objects/Case/validationRules/Prevent_Close_When_Integration_Failed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Close_When_Integration_Failed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Closed&quot;),
ISPICKVAL(Integration_Status__c, &quot;Failed&quot;)
)</errorConditionFormula>
    <errorMessage>Cases with failed integrations cannot be closed.</errorMessage>
</ValidationRule>